2010-02-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp|h: Make InternString return a const char* so it's
	clear (even for the compiler) that the caller shouldn't free it. NULL
	out the interned hash table when destroyed so that it's not re-freed if
	Dispose is called again.

	* xaml.h: Make resource_base a const char* so that it's clear we
	shouldn't free it.

2010-02-25  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: If the last ref to the object is
	  because it's the SubtreeObject, then we need to call the
	  base ElementRemoved function first otherwise we'll be
	  accessing invalid memory once the subtree is cleared.

2010-02-25  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: FE::WidthProperty takes a double but
	  active_window->GetWidth () returns an int. Cast to a double
	  so that SetValue doesn't fail when setting the width of the
	  warning messages.

2010-02-25  Alan McGovern  <amcgovern@novell.com>

	* bitmapimage.cpp: Unregress drt 97 - Now that PixbufWrite
	  doesn't emit the failed event dirctly we need to handle it
	  here for the case where managed code provides a Stream as
	  the source.

2010-02-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/window-gtk.cpp: Add line about build configuration to the properties.
	
2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/debug-ui.cpp: Expand even more on the media debug dialog.

	* playlist.h: Playlist: Added a getter to fetch the list of entries.

	* pipeline-asf.cpp|h: ASFFrameReader: keep a count of the number of
	payloads we have. ASFDemuxer: add a method to get the number of
	payloads a stream has cached.

2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyproperty.cpp: Fix compiler warning.

2010-02-25  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.h: FrameworkElement.DataContext is now
	  treated as if it were a Custom DP. It doesn't parent its
	  content and doesn't register its contents name if the